--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: package625
 Type: Package
-Title: What the Package Does (Title Case)
+Title: 625 Test Package
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Author: Flynn McMorrow
+Maintainer: Flynn McMorrow <flynnmc@umich.edu>
+Description: Testing R Package Upload for 625
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
