--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,14 @@
-Package: cor_test_625
+Package: cortest625
 Type: Package
 Title: Correlation
 Version: 0.1.0
-Author: Flynn McMorrow
+Author: "Flynn McMorrow"
 Maintainer: Flynn McMorrow <flynnmc@umich.edu>
-Description: Correlation Package for Spearman, Kendall & Pearson Correlations
+Description: Correlation Package for Spearman, Kendall and Pearson Correlations.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.1
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
