--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,5 +11,8 @@ LazyData: true
 RoxygenNote: 7.2.1
 Suggests: 
     covr,
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+VignetteBuilder: knitr
