Fixed package dependency in vignettes and comments in documentation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,8 @@ Suggests:
     covr,
     knitr,
     rmarkdown,
+    bench,
+    ggbeeswarm,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 VignetteBuilder: knitr
